fixtures/solidity/translated_semantic_tests/errors/error_in_library_and_interface/error_in_library_and_interface.sol
error E(uint a);
library L {
    error E(uint a, uint b);
}
interface I {
    error E(uint a, uint b, uint c);
}
contract C {
    function f() public pure {
        revert E(1);
    }
    function g() public pure {
        revert L.E(1, 2);
    }
    function h() public pure {
        revert I.E(1, 2, 3);
    }
}